# llm-developer-playground

./: .gitignore  Pipfile  README.md  pyproject.toml
llm_developer_playground/: __init__.py  authentication.ipynb  context_management.ipynb  cost_estimation.ipynb  cost_estimation.py  cost_tracking.ipynb  cost_tracking.py  model_list.ipynb  oai_functions.ipynb
llm_developer_playground/context_management/: chunking.ipynb  front_loading.ipynb  sample_input.txt  sample_output.txt
