[tool.poetry]
name = "llm-developer-playground"
version = "0.1.0"
description = ""
authors = ["Christopher Carroll Smith <75859865+chriscarrollsmith@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "llm_developer_playground"}]

[tool.poetry.dependencies]
python = "^3.9"
tiktoken = "^0.4.0"
urllib3 = "^2.0.2"
python-dotenv = "^1.0.0"
openai = "^0.27.7"
langchain = "^0.0.174"
pytest = "^7.3.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
